waybar-modular/modules/workspaces/style.css
#workspaces {
    font-family:   "FantasqueSansM Nerd Font";
    font-size:     14px;
    margin:        0 3px 0 3px;
}

#workspaces button {
    border:           none;
    border-radius:    200px;
    color:            darker(@color8);
    margin:           4px 0;
    padding:          2px 3px;
    min-height:       0;
}

#workspaces button.active {
    border:           none;
    background-color: alpha(@bg-active, 0.8);
    border-radius:    4px;
    padding:          2px 8px;
    margin:           4px 3px;
    color:            @fg-hover;
}

#workspaces button:hover {
    background:       alpha(@bg-active, 0.2);
    border-radius:    4px;
    color:            @fg-hover;
}

